--- a/AbstractFood/app/src/main/AndroidManifest.xml
+++ b/AbstractFood/app/src/main/AndroidManifest.xml
@@ -21,22 +21,32 @@
             android:name=".FoodActivity"
             android:label="@string/food">
         </activity>
-        <activity android:name=".ProfileActivity"
+        <activity
+            android:name=".ProfileActivity"
             android:label="@string/profile">
         </activity>
-        <activity android:name=".LoginActivity"
+        <activity
+            android:name=".LoginActivity"
             android:label="@string/login">
         </activity>
-        <activity android:name=".SignupActivity"
+        <activity
+            android:name=".SignupActivity"
             android:label="@string/signup">
         </activity>
-        <activity android:name=".DiscoverActivity"
+        <activity
+            android:name=".DiscoverActivity"
             android:label="@string/discover">
-        </activity><!-- ATTENTION: This was auto-generated to add Google Play services to your project for
-     App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information. -->
+        </activity>
+        <!--
+ ATTENTION: This was auto-generated to add Google Play services to your project for
+     App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information.
+        -->
         <meta-data
             android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version" />
+            android:value="@integer/google_play_services_version"/>
+
+        <activity android:name=".UpdateActivity">
+        </activity>
     </application>
 
 </manifest>
