--- a/AbstractFood/app/src/main/AndroidManifest.xml
+++ b/AbstractFood/app/src/main/AndroidManifest.xml
@@ -29,6 +29,10 @@
             android:name=".LoginActivity"
             android:label="@string/login">
         </activity>
+        <activity android:name=".ReportActivity"
+            android:label="Report">
+        </activity>
+        <activity android:name=".SignupActivity"
         <activity
             android:name=".SignupActivity"
             android:label="@string/signup">
@@ -43,10 +47,7 @@
         -->
         <meta-data
             android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version"/>
-
-        <activity android:name=".UpdateActivity">
-        </activity>
+            android:value="@integer/google_play_services_version" />
     </application>
 
 </manifest>
