--- a/AbstractFood/app/build.gradle
+++ b/AbstractFood/app/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     compile 'com.firebase:firebase-client-android:2.3.1'
     compile 'com.google.android.gms:play-services-appindexing:8.1.0'
     compile 'com.android.support:support-v4:23.3.0'
+    compile 'com.android.support:design:23.0.1'
 }
