--- a/AbstractFood/app/src/main/AndroidManifest.xml
+++ b/AbstractFood/app/src/main/AndroidManifest.xml
@@ -32,7 +32,6 @@
         <activity android:name=".ReportActivity"
             android:label="Report">
         </activity>
-        <activity android:name=".SignupActivity"
         <activity
             android:name=".SignupActivity"
             android:label="@string/signup">
@@ -47,7 +46,15 @@
         -->
         <meta-data
             android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version" />
+            android:value="@integer/google_play_services_version"/>
+
+        <activity android:name=".UploadActivity">
+        </activity>
+        <activity
+            android:name=".IngredientAdderActivity"
+            android:label="@string/title_activity_ingredient_adder"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
     </application>
 
 </manifest>
