--- a/AbstractFood/app/src/main/AndroidManifest.xml
+++ b/AbstractFood/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.food.abstractfood">
+<manifest package="com.food.abstractfood"
+          xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
@@ -12,49 +12,45 @@
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
         <activity
             android:name=".FoodActivity"
-            android:label="@string/food" />
+            android:label="@string/food">
+        </activity>
         <activity
             android:name=".ProfileActivity"
-            android:label="Profile" />
+            android:label="@string/profile">
+        </activity>
         <activity
             android:name=".LoginActivity"
-            android:label="@string/login" />
-        <activity
-            android:name=".ReportActivity"
-            android:label="@string/Report" />
+            android:label="@string/login">
+        </activity>
         <activity
             android:name=".SignupActivity"
-            android:label="@string/signup" />
+            android:label="@string/signup">
+        </activity>
         <activity
             android:name=".DiscoverActivity"
-            android:label="@string/discover" />
-        <activity android:name=".Home"
-            android:label="@string/Home"/>
+            android:label="@string/discover">
+        </activity>
+        <activity
+            android:name=".D_SearchBN"
+            android:label="@string/searchbyname">
+        </activity>
         <!--
  ATTENTION: This was auto-generated to add Google Play services to your project for
      App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information.
         -->
         <meta-data
             android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version" />
+            android:value="@integer/google_play_services_version"/>
 
-        <activity android:name=".UploadActivity" />
-        <activity
-            android:name=".ChangePassword"
-            android:label="@string/change_passowrd" />
-        <activity
-            android:name=".IngredientAdderActivity"
-            android:label="@string/title_activity_ingredient_adder"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".AddRecipeActivity" />
-
+        <activity android:name=".UploadActivity">
+        </activity>
     </application>
 
 </manifest>
