--- a/AbstractFood/app/src/main/AndroidManifest.xml
+++ b/AbstractFood/app/src/main/AndroidManifest.xml
@@ -41,10 +41,11 @@
             android:name=".D_SearchBN"
             android:label="@string/searchbyname">
         </activity>
-        <!--
- ATTENTION: This was auto-generated to add Google Play services to your project for
-     App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information.
-        -->
+        <activity
+            android:name=".D_IngredientFinder"
+            android:label="@string/IngredientFinderTitle">
+        </activity>
+
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version"/>
@@ -56,8 +57,8 @@
                     android:label="@string/change_passowrd" />
                <activity
                   android:name=".IngredientAdderActivity"
-                    android:label="@string/title_activity_ingredient_adder"
-                    android:theme="@style/AppTheme.NoActionBar" />
+                   android:label="@string/title_activity_ingredient_adder"/>
+
                 <activity android:name=".AddRecipeActivity" />
 
     </application>
