--- a/AbstractFood/app/src/main/AndroidManifest.xml
+++ b/AbstractFood/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
           xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.INTERNET"/>
-
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -52,6 +52,10 @@
         <activity
             android:name=".D_IngredientFinder"
             android:label="@string/IngredientFinderTitle">
+        </activity>
+        <activity android:name=".ForgotUsernamePassword">
+
+
         </activity>
 
         <meta-data
