The ingredient adder is swipeable now up to 30.
Pending: components in upload aren't connected
button in ingredient adder not active to go back or end fragments

--- a/AbstractFood/app/src/main/AndroidManifest.xml
+++ b/AbstractFood/app/src/main/AndroidManifest.xml
@@ -50,6 +50,9 @@
             android:label="@string/Report">
         </activity>
         <activity
+            android:name=".D_IFSearchAlg"
+            android:label="@string/IngredientFinderTitle"/>
+        <activity
             android:name=".D_IngredientFinder"
             android:label="@string/IngredientFinderTitle">
         </activity>
